--- a/public/DiU_home.html
+++ b/public/DiU_home.html
@@ -84,6 +84,24 @@
                   href="Kira.html"
                   >Kira Yoshikage</a
                 >
+                <a
+                  class="dropdown-item"
+                  style="background-color: #d6a802; color: black"
+                  href="Koichi.html"
+                  >Hirose Koichi</a
+                >
+                <a
+                  class="dropdown-item"
+                  style="background-color: #d6a802; color: black"
+                  href="Jotaro.html"
+                  >Kujo Jotaro</a
+                >
+                <a
+                  class="dropdown-item"
+                  style="background-color: #d6a802; color: black"
+                  href="Okuyasu.html"
+                  >Nijimura Okuyasu</a
+                >
               </div>
             </li>
           </ul>
