--- a/public/Jotaro.html
+++ b/public/Jotaro.html
@@ -18,7 +18,7 @@
 
   <body
     class="d-flex flex-column"
-    style="background: top center repeat url(./images/Jotaro_Background.JPG)"
+    style="background: top center repeat url(./images/Jotaro_Background.JPG)">
     <div class="page-content">
       <nav
         class="navbar navbar-expand-lg navbar-dark"
