pequena correção de escrita

--- a/public/Jotaro.html
+++ b/public/Jotaro.html
@@ -145,7 +145,7 @@
                 style="background-color: rgba(14, 14, 14, 1)"
               >
                 <p style="color: rgb(240, 240, 240)">
-                  Além dos poderes já descritos, 「Star Platinum」 também pode ativar 「Star Platinum=The World」, capaz
+                  Além dos poderes já descritos, 「Star Platinum」 também pode ativar 「Star Platinum: The World」, capaz
                   de parar o tempo por um curto intervalo (em Diamond is Unbreakable, 2 segundos).
                 </p>
                
